--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.24</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -28,6 +33,11 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>11</release>
+                    <annotationProcessorPaths>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.20</version>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
